src/objects/VAT__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EU_Standard_VAT_Rate__c</fullName>
        <label>EU Standard VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_Android__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Android</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Mobile_Cost__c</fullName>
        <label>Premium Mobile Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Tablet_Cost__c</fullName>
        <label>Premium Tablet Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Tablet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Website_Cost__c</fullName>
        <label>Premium Website Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UK_Exempt_VAT_Rate__c</fullName>
        <label>UK Exempt VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UK_Export_VAT_Rate__c</fullName>
        <label>UK Export VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UK_Standard_VAT_Rate__c</fullName>
        <label>UK Standard VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vat_rate__c</fullName>
        <label>Vat_rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>VAT</label>
</CustomObject>